# RustEcosystemTracker

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  proj.txt
.github/workflows/: fetch-feed.yml
output/: rust-blog.md
src/: config.rs  fetcher.rs  llm.rs  main.rs  state.rs  storage.rs
