[package]
name = "rust-ecosystem-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
atom_syndication = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dotenvy = "0.15"
chrono = "0.4"
serde_json = "1"
